<resources>
    <string name="app_name">CST2335FinalProject</string>

    <string name="recipecovidname">Covid App</string>
    <string name="recipeaudioname">Audio App</string>
    <string name="recipeticketname">Ticket App</string>
    <string name="reciperecipename">Recipe App</string>
    <string name="recipetitle">Title</string>
    <string name="recipeexit">Exit</string>
    <string name="recipedeletetitle">Delete Ingredient</string>
    <string name="recipesavetitle">Saved Recipes</string>
    <string name="recipesearchdots">Search...</string>
    <string name="recipeyes">Yes</string>
    <string name="recipeimagepreview">Image Preview</string>
    <string name="recipesaveadded">Is saved</string>
    <string name="recipesearch">Search</string>
    <string name="recipeundo">Undo</string>
    <string name="recipeingredientadded">Added Ingredient</string>
    <string name="reciperemoved">Removed</string>
    <string name="recipesearchid">ID</string>
    <string name="recipeinfo">Information</string>
    <string name="recipeopen">Open</string>
    <string name="recipedatabasetitle">Database:</string>
    <string name="recipedelete">Delete</string>
    <string name="reciperemove">Remove</string>
    <string name="recipeno">No</string>
    <string name="recipeingredient">Ingredient</string>
    <string name="recipedeleteconfirm">Do you want to delete</string>
    <string name="recipehelp">Help</string>
    <string name="recipeclose">Close</string>
    <string name="recipeadd">Add</string>
    <string name="recipeingredientsdots">Ingredient...</string>
    <string name="recipeok">OK</string>
    <string name="recipeingredients">Ingredients</string>
    <string name="recipesaved">Saved</string>
    <string name="recipesearchidextra">ID: </string>
    <string name="recipedeveloper">Developer</string>
    <string name="recipeitem">View Item</string>
    <string name="recipesaveremoved">Is removed</string>

    <string name="covidCountry">Country</string>
    <string name="covidCountryEditText">Enter a country name...</string>
    <string name="covidDate">Date</string>
    <string name="covidDateEditText">Please select a date...</string>
    <string name="covidSearchBtn">Search</string>
    <string name="covidAuthor">Author: Kris Charbonneau</string>
    <string name="covidVersion">Version 1.0</string>
    <string name="covidAppTitle">COVID-19 Case Data</string>
    <string name="sortSwitch">Sort by # of cases</string>
    <string name="covidSearchResults">Search Results</string>
    <string name="covidSort">The list has been sorted</string>
    <string name="covidUnsort">The list is not sorted</string>
    <string name="covidSavedResults">Saved Search Results</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="covidHide">Hide</string>
    <string name="covidMessageHere">Details</string>
    <string name="covidLocationDetails">Location Details</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="covidHelpMain">Enter a country and a pick a date to see updated statistics on that particular day.</string>
    <string name="covidHelpTitle">Help</string>
    <string name="covidHelpResults">This page shows updated statistics of the selected country, on the day selected. \n\nTo sort the results, tick the checkbox.\n\nTo view details about the location, click an item. \n\nTo delete an item from the database, click and hold an item and follow the dialog.</string>
    <string name="covidGoBackToHome">GO BACK TO HOME</string>
    <string name="covidSaveSearch">SAVE SEARCH RESULTS</string>
    <string name="covidLoadResults">LOAD SEARCH RESULTS</string>
    <string name="covidHelpMenuItem">HELP</string>
    <string name="help_dialog">Help Dialog</string>
    <string name="okay">Okay</string>
    <string name="api_key" translatable="false">BrF9b5BrpcAfWvYgEvpaAEgrYb3ER9uM</string>
    <string name="info_help">Event Detail by Jose, version 1</string>
    <string name="msg_stored_event">You already have stored this event!</string>
    <string name="msg_deleted">Event has been Deleted from favorites!</string>
    <string name="help_info_activity">Here you can see the details of the event, press save to store event or press delete to delete the event</string>
    <string name="dialog_title">Help Dialog</string>
    <string name="toolbar_saved">Favorite Events By Jose, Version 1</string>
    <string name="msg_no_saved_item">There\'s no events saved here!</string>
    <string name="help_saved_activity">Here you can see the list of events which was saved by you!</string>
    <string name="toolbar_search">Search Events By Jose, Version1</string>
    <string name="search_help_activity">Enter City Name and get Events from TicketMaster</string>
    <string name="validate_input_city">Please Enter City Name</string>
    <string name="error_no_event_found">There\'s no events available for given city! sorry try again later!</string>
</resources>